  * dxr3: fix situation, where the initial menu on some DVDs would have
    the wrong aspect
  * major refinement of post plugin architecture fixes a lot of races
  * fix runtime audio channel selection, specially for ogg/ogm streams
  * preliminary matroska support
  * support for AAC audio in RealMedia files
  * implement chapter skipping in ogm files

xine-lib (1-rc3a)
  * new subtitle formats: jacobsub, subviewer 2.0, subrip 0.9
  * auto hiding of the subtitles
  * raw AAC file demuxer
  * fix starvation problem with kernel 2.6 NPTL
  * not overwrite the files by saving plugin
  * deinterlace fixes (detect mpeg1 as progressive and correct handling
    of top_field_first)
  * ogg/ogm demuxer fixes for big endian machines
  * update win32 port, working ffmpeg decode plugin
  * fixed segfault when running in verbose mode
	
xine-lib (1-rc3)
  * fix dvd menu blending when using tvtime plugin (yuy2 blend)
  * fix problems with some more elaborate post plugin setups
  * discontinuity problems in audio only streams fixed
  * fix a bug in the id3v2.2 parsing code
  * fix best streams choice in mmsh
  * updated internal copy of ffmpeg with a lot of warning fixes
  * help texts for video post plugins
  * fix pts handling bug that caused long freezing in some animated dvd menus
  * configfile beautification (values set to default are now commented out)
  * fix some more problems with jumpy non-MPEG NTSC streams on the DXR3
  * handle comments in rpm playlist files
  * realaudio demuxer improvements including support for 14.4 codec and reading
    meta info
  * post plugin for ffmpeg libpostprocess (pp)
  * updated win32 MSVC port
  * default to menu button 1, if an invalid button is set
    (fixes main menu of "Alice in Wonderland" RC2)
  * fix yuy2 output on mga_vid vidix driver
  * fix syncing code of audio visualization post plugins
    (goom video does not jump any more)
  * problem with long frame durations fixed
  * seek timeout in RIP input plugin